--- a/hw04/index3.html
+++ b/hw04/index3.html
@@ -4,14 +4,19 @@
       <link rel="stylesheet" href='../static/style.css'/>
    </head>
    <body>
-		<h2>Actuators</h2>
-		<h3> Status </h3>
+		<h2>Flask Etch</h2>
+		<h3> Button Status </h3>
 		     RED LED ==>  {{ ledRed  }}
+			 Green LED ==> {{ ledGreen }}
 		<br>
 		<h3> Commands </h3>
-			RED LED Ctrl ==> 
+			<p>RED LED Ctrl ==> 
 			<a href="/ledRed/on" class="button">TURN ON</a>  
 			<a href="/ledRed/off"class="button">TURN OFF</a>
+
+			</p>GREEN LED Ctrl ==> 
+				<a href="/ledGreen/on" class="button">TURN ON</a>  
+				<a href="/ledGreen/off"class="button">TURN OFF</a>
    </body>
 </html>
 
